--- a/index.html
+++ b/index.html
@@ -47,11 +47,17 @@
             </p>
             <button class="hero-button" type="button">Get started</button>
           </div>
-          <div class="hero-thumb">
-            <img src="" alt="" />
+          <div class="hero-thumb-wrapper">
+            <div class="hero-thumb">
+              <img src="" alt="" />
+            </div>
+            <p>With our teachers who</p>
           </div>
         </div>
       </section>
     </main>
+    <div class="backdrop">
+      <div class="modal"></div>
+    </div>
   </body>
 </html>
